Closed Bug 1558098 Opened 6 years ago Closed 3 years ago

postMessage to a redundant service worker should drop silently.

Categories

(Core :: DOM: Service Workers, defect, P2)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: falken, Assigned: joshuacmarshall)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.12 Safari/537.36

Steps to reproduce:

worker.postMessage() to a redundant service worker.

Actual results:

Throws InvalidStateError.

Expected results:

Drop silently.

Per spec change at https://github.com/w3c/ServiceWorker/issues/1146
WPT is being updated at https://github.com/web-platform-tests/wpt/pull/17246

Component: Untriaged → DOM: Service Workers
Product: Firefox → Core

Set as P2 since the spec change.

Priority: -- → P2
Severity: normal → S3
Assignee: nobody → jmarshall
Attachment #9304533 - Attachment description: WIP: Bug 1558098 - postMessage to a redundant service worker should drop silently → Bug 1558098 - postMessage to a redundant service worker should drop silently
Attachment #9304533 - Attachment description: Bug 1558098 - postMessage to a redundant service worker should drop silently → WIP: Bug 1558098 - postMessage to a redundant service worker should drop silently
Attachment #9304533 - Attachment description: WIP: Bug 1558098 - postMessage to a redundant service worker should drop silently → Bug 1558098 - postMessage to a redundant service worker should drop silently
Pushed by jmarshall@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/24e1adf0f037 postMessage to a redundant service worker should drop silently r=dom-worker-reviewers,asuth
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: