Bug 1558098 - postMessage to a redundant service worker should drop silently r=dom-worker-reviewers,asuth

Differential Revision: https://phabricator.services.mozilla.com/D162596